WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107750
Constant folding an access to an uncaptured variable that is captured later in the same basic block shouldn't lead to assertion failures
https://bugs.webkit.org/show_bug.cgi?id=107750
Summary
Constant folding an access to an uncaptured variable that is captured later i...
Filip Pizlo
Reported
2013-01-23 15:24:41 PST
Patch forthcoming. <
rdar://problem/12387265
>
Attachments
the patch
(10.59 KB, patch)
2013-01-23 15:28 PST
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-01-23 15:28:29 PST
Created
attachment 184328
[details]
the patch
Mark Hahnenberg
Comment 2
2013-01-23 15:34:13 PST
Comment on
attachment 184328
[details]
the patch r=me
Filip Pizlo
Comment 3
2013-01-23 16:12:01 PST
Landed in
http://trac.webkit.org/changeset/140608
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug